graphql-parser/tests/snapshots/test__parse_query__query_var_default_float.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            Operation(
                Query(
                    Query {
                        position: Pos(1:1),
                        name: Some(
                            "Foo",
                        ),
                        variable_definitions: [
                            VariableDefinition {
                                position: Pos(1:11),
                                name: "site",
                                var_type: NamedType(
                                    "Float",
                                ),
                                default_value: Some(
                                    Float(
                                        0.5,
                                    ),
                                ),
                            },
                        ],
                        directives: [],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:31),
                                Pos(3:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "field",
                                        arguments: [],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:3),
                                                Pos(2:3),
                                            ),
                                            items: [],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
