graphql-parser/tests/snapshots/test__parse_query__query_vars.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            Operation(
                Query(
                    Query {
                        position: Pos(1:1),
                        name: Some(
                            "Foo",
                        ),
                        variable_definitions: [
                            VariableDefinition {
                                position: Pos(1:11),
                                name: "arg",
                                var_type: NamedType(
                                    "SomeType",
                                ),
                                default_value: None,
                            },
                        ],
                        directives: [],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:27),
                                Pos(3:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "field",
                                        arguments: [],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:3),
                                                Pos(2:3),
                                            ),
                                            items: [],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
