graphql-parser/tests/snapshots/test__parse_query__scalar_type.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `\"This is the best scalar type\"[StringValue]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
