graphql-parser/tests/snapshots/test__parse_query__schema_kitchen_sink.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 6:1\nUnexpected `schema[Name]`\nExpected `{`, `query`, `mutation`, `subscription` or `fragment`\n",
    ),
)
